# bizol

./: .gitignore  db.sqlite3  pyproject.toml
apps/api/: serializers.py  urls.py  views.py
apps/blogs_app/: urls.py  views.py
apps/blogs_app/templates/: 404.html  blog_list.html  blog_single.html  coming_soon.html  store_location.html
apps/main_app/: choices.py  forms.py  models.py  urls.py  views.py
apps/main_app/migrations/: 0001_initial.py  0002_alter_category_icon.py  0003_order.py  0004_order_date_order_phone_number_order_status.py  0005_alter_order_date.py
apps/main_app/templates/: 404.html  about.html  base.html  contact.html  faq.html  index.html  terms.html
apps/payments_app/: apps.py  urls.py  views.py
apps/payments_app/templates/: shop.html  shop2.html  shop_cart.html  shop_checkout.html  shop_order_complete.html  shop_order_tracking.html
apps/store_app/: apps.py  models.py  urls.py  views.py
apps/store_app/migrations/: 0001_initial.py  0002_delete_category_alter_order_customer_and_more.py  0003_alter_order_date.py  0004_alter_order_date.py  0005_alter_order_date.py  0006_alter_product_slug.py  0007_product_category.py  0008_alter_product_category.py  0009_delete_order.py
apps/store_app/templates/: lookbook.html  product1_simple.html  product2_variable.html  product3_external.html  product4_grouped.html  product5_onsale.html  product6_outofstock.html  store_location.html
apps/users_app/: models.py  urls.py  views.py
apps/users_app/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: index.html
(+8 files in other folders)
